Awaiting Extended Evaluation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <script src="./assets/javascripts/traveler.js"></script>
     <script src="./assets/javascripts/wagon.js"></script>
+    <script src="./assets/javascripts/Doctor.js"></script>
+    <script src="./assets/javascripts/Hunter.js"></script>
     <script src="./assets/javascripts/main.js"></script>
     <script src="./assets/javascripts/tests.js"></script>
 </body>
